Fix alignment issue in the clock and location part of the postCard and set the correct size to the icons

--- a/src/app/public/scss/unice-theme/theme/_style.scss
+++ b/src/app/public/scss/unice-theme/theme/_style.scss
@@ -719,7 +719,6 @@ ul {
 }
 .center-text {
   height: 100%;
-  align-items: center;
   display: flex;
   position: relative;
   z-index: 2;
